# KitchenSinc

./: .gitignore  .gitmodules  CMakeLists.txt  MainComponent.cpp  MainComponent.h  README.md
TestPlugin/: CMakeLists.txt
source/: AudioSettingsComponent.cpp  AudioSettingsComponent.hpp  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponent.hpp  PluginWindow.cpp  PluginWindow.hpp
source/customProcessors/: AudioSettingsComponent.cpp  BaseProcessor.hpp  STFTComponent.cpp  STFTComponent.hpp  SpectrogramComponent.cpp  SpectrogramComponent.hpp  ToneGenerator.cpp  ToneGenerator.hpp
